# glyphs-exchange

./: .gitignore  .gitlab-ci.yml  Cargo.toml  glyphs-exchange.pkgproj
glyphs_exchange/: Cargo.toml  build.rs
glyphs_exchange/src/: location.rs  main.rs  to_designspace.rs  to_glyphs.rs
glyphs_exchange/wix/: main.wxs
glyphs_plist/: Cargo.toml
glyphs_plist/src/: font.rs  from_plist.rs  lib.rs  norad_interop.rs  plist.rs  to_plist.rs
glyphs_plist_derive/: Cargo.toml
glyphs_plist_derive/src/: lib.rs
glyphstool/: Cargo.toml
glyphstool/src/: font.rs  from_plist.rs  inco_fix.rs  lib.rs  main.rs  ops.rs  region.rs  to_plist.rs
scripts/: dist_macos.sh  dist_windows.ps1  extract-version.py
src/: main.rs  to_designspace.rs  to_glyphs.rs
testdata/: NewFont.glyphs  NewFontG3.glyphs
