[package]
name = "glyphs-exchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
glyphstool = { path = "glyphstool" }
norad = { version = "0.10", features = ["rayon"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
kurbo = "0.9.2"
