[package]
name = "glyphs-exchange"
# NOTE: Also change in glyphs-exchange.pkgproj.
# TODO: Extract version from here and use `/usr/local/bin/packagesbuild --package-version ...` to keep the version in sync automatically.
version = "0.1.0"
license = "Proprietary"
authors = ["The SD Team <sd@daltonmaag.com>"]
edition = "2021"
description = "A UFO to Glyphs.app format and back converter."
repository = "https://gitlab.daltonmaag.com/damadevs/fl2ufo"
rust-version = "1.68.2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
glyphs_plist = { path = "../glyphs_plist" }
kurbo = { workspace = true }
maplit = "1.0.2"
norad = { workspace = true }
rayon = "1.7.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
