[package]
name = "glyphs-exchange"
version = "0.4.0"
license = "Apache-2.0"
authors = ["The SD Team <sd@daltonmaag.com>"]
edition = "2021"
description = "A UFO to Glyphs.app format and back converter."
repository = "https://gitlab.daltonmaag.com/damadevs/fl2ufo"
rust-version = "1.68.2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.10"
glyphs_plist = { path = "../glyphs_plist" }
kurbo = { workspace = true }
log = "0.4"
maplit = "1.0.2"
norad = { workspace = true }
rayon = "1.7.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
mimalloc = { version = "*", default-features = false }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
