[package]
name = "glyphs_plist"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glyphs_plist_derive = { path = "../glyphs_plist_derive" }
kurbo = { workspace = true }
norad = { workspace = true }

[dev-dependencies]
maplit = "1.0.2"
