[package]
name = "glyphstool"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "glyphstool"

[dependencies]
kurbo = "0.9.2"
plist_derive = { path = "plist_derive" }

# This dep is used for the binary, not the lib, but oh well.
structopt = "0.3.2"
